--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,11 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.8
+  firebase_core: ^4.2.1
+  firebase_messaging: ^16.0.4
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^19.5.0
   flutter_native_splash: ^2.4.7
   webview_flutter: ^4.13.0
 
